--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
         "@fullcalendar/rrule": "4.4.2",
         "@fullcalendar/timegrid": "4.4.2",
         "@ngneat/transloco": "2.20.1",
+        "@ngxs/form-plugin": "latest",
+        "@ngxs/logger-plugin": "latest",
+        "@ngxs/router-plugin": "latest",
+        "@ngxs/store": "^3.7.2",
         "apexcharts": "3.26.3",
         "crypto-js": "3.3.0",
         "highlight.js": "10.7.2",
