--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
         "rxjs": "6.6.7",
         "tslib": "2.2.0",
         "web-animations-js": "2.3.2",
-        "zone.js": "0.11.4"
+        "zone.js": "0.11.4",
+        "ngx-socket-io": "latest"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "12.0.0",
