--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
         "postcss": "8.3.0",
         "protractor": "7.0.0",
         "tailwindcss": "2.1.2",
-        "typescript": "4.2.4"
+        "typescript": "4.2.4",
+        "uuid": "^8.3.2"
     }
 }
