--- a/package.json
+++ b/package.json
@@ -43,15 +43,16 @@
         "moment": "2.29.1",
         "ng-apexcharts": "1.5.10",
         "ngx-markdown": "12.0.0",
+        "ngx-mat-file-input": "^3.0.0-beta.0",
         "ngx-quill": "14.0.0",
+        "ngx-socket-io": "latest",
         "perfect-scrollbar": "1.5.1",
         "quill": "1.3.7",
         "rrule": "2.6.8",
         "rxjs": "6.6.7",
         "tslib": "2.2.0",
         "web-animations-js": "2.3.2",
-        "zone.js": "0.11.4",
-        "ngx-socket-io": "latest"
+        "zone.js": "0.11.4"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "12.0.0",
