--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "quill": "1.3.7",
         "rrule": "2.6.8",
         "rxjs": "6.6.7",
+        "socket.io-client": "^4.1.2",
         "tslib": "2.2.0",
         "web-animations-js": "2.3.2",
         "zone.js": "0.11.4"
